--- a/static_htmls/header.html
+++ b/static_htmls/header.html
@@ -7,13 +7,21 @@ The existing link: "../images/imageName.gif" must be changed into: "../locale/sp
 
 <script type="text/javascript">
 $(document).ready(function(){
-	// add reserves instructions
-	var reservesText='<a href="http://www.library.vcu.edu/reserves/" style="display: block; padding:6px;">Course reserves info &raquo;</a></p>';
-	$('#search_field.EXLSearchFieldMaximized').attr('placeholder','search for course name/number or item title');
-	$('.EXLSearchFieldRibbon.EXLSearchFieldRibbonFormSearchForMaximized').append(reservesText);
+        // add reserves instructions to course reserves view
+        var reservesText='<a href="http://www.library.vcu.edu/reserves/" style="display: block; padding:6px;">Course reserves info &raquo;</a></p>';
+        $('.EXLSearchFieldRibbon.EXLSearchFieldRibbonFormSearchForMaximized').append(reservesText);
+        $('#search_field.EXLSearchFieldMaximized').attr('placeholder','search for course name/number or item title');
 
-	// add citation linker instructions
-	var citationText='<p style="clear:both;padding:6px 12px;">Fill in as much of the citation information as you can to connect directly to a specific article, journal, or book.</p>';
-	$('div.EXLCitationLinkerHeader').append(citationText);
+        // add instructions to citation linker
+        var citationText='<p style="clear:both;padding:6px 12px;">Fill in as much of the citation information as you can to connect directly to a specific article, journal, or book.</p>';
+        $('div.EXLCitationLinkerHeader').append(citationText);
+
+        // add browse link to advanced
+        var browseLink='<div class="EXLSearchFieldRibbonBrowseSearchLink"><a class="EXLSearchFieldRibbonAdvancedTwoLinks" title="Browse Books and Media" href="search.do?fn=showBrowse&amp;mode=BrowseSearch&amp;dscnt=0&amp;fromEshelf=false&amp;fromTop=true&amp;fromPreferences=true&amp;dstmp=1377884473837&amp;menuitem=0&amp;vid=VCU">Browse Books and Media</a></div>';
+        $('.EXLBriefDisplay #exlidAdvancedSearchTile.EXLAdvancedSearch #exlidAdvancedSearchRibbon .EXLSearchFieldRibbonFormLinks').append(browseLink);
+
+        // add advanced link to browse        
+        var advancedLink='<a style="margin-left:20px;" class="EXLSearchFieldRibbonAdvancedTwoLinks" title="Switch to Advanced Search" href="search.do?mode=Advanced&amp;ct=AdvancedSearch&amp;dscnt=0&amp;fromEshelf=false&amp;fromTop=true&amp;fromPreferences=false&amp;dstmp=1377891402235&amp;menuitem=0&amp;vid=VCU" id="advancedSearchBtn">Advanced Search</a>';
+        $('#exlidAdvancedSearchTile #exlidAdvancedSearchRibbon.EXLAdvancedBrowseRibbon .EXLSearchFieldRibbonFormLinks').append(advancedLink);
 });
 </script>
