update link to reserves

--- a/static_htmls/header.html
+++ b/static_htmls/header.html
@@ -8,7 +8,7 @@ The existing link: "../images/imageName.gif" must be changed into: "../locale/sp
 <script type="text/javascript">
 $(document).ready(function(){
         // add reserves instructions to course reserves view
-        var reservesText='<a href="http://www.library.vcu.edu/reserves/" style="display: block; padding:6px;">Course reserves info &raquo;</a></p>';
+        var reservesText='<a href="http://www.library.vcu.edu/research/reserves/" style="display: block; padding:6px;">Course reserves info &raquo;</a></p>';
         $('.EXLSearchFieldRibbon.EXLSearchFieldRibbonFormSearchForMaximized').append(reservesText);
         $('#search_field.EXLSearchFieldMaximized').attr('placeholder','search for course name/number or item title');
 
